fixed scrollbar /menu issue by shrinking contianer to smaller width

--- a/src/less/App.less
+++ b/src/less/App.less
@@ -5,8 +5,8 @@
     justify-content: center;
     text-align:center; 
     font-family: 'Oxygen', sans-serif;
-    // overflow-x:hidden;
-    width:98%;
+    // overflow:auto;
+    width:94%;
     margin:0 auto;
 }
 
